--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "src/index.js",
   "scripts": {
     "test": "jest",
+    "start-server": "http-server  ./src/__tests__/ --port 8081 ",
     "build": "webpack --config webpack.config.js --mode development --watch"
   },
   "private": true,
@@ -14,6 +15,7 @@
     "webpack-cli": "^5.1.4"
   },
   "devDependencies": {
+    "http-server": "^14.1.1",
     "jest": "^29.7.0"
   }
 }
