--- a/package.json
+++ b/package.json
@@ -3,18 +3,31 @@
   "version": "1.0.0",
   "description": "",
   "main": "src/index.js",
+  "type": "module",
   "scripts": {
     "test": "jest",
     "start-server": "http-server  ./src/__tests__/ --port 8081 ",
     "build": "webpack --config webpack.config.js --mode development --watch"
   },
   "private": true,
+  "jest": {
+    "testPathIgnorePatterns": [
+      "src/__tests__/__mocks__/lodash.js",
+      "src/__tests__/users.js"
+    ],
+    "transform": {
+      "\\.[jt]sx?$": "babel-jest"
+    }
+  },
   "dependencies": {
     "lodash": "^4.17.21",
     "webpack": "^5.95.0",
     "webpack-cli": "^5.1.4"
   },
   "devDependencies": {
+    "@babel/core": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
+    "babel-jest": "^29.7.0",
     "http-server": "^14.1.1",
     "jest": "^29.7.0"
   }
