--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.js",
   "type": "module",
   "scripts": {
-    "test": "jest",
+    "test": "jest --coverage",
     "start-server": "http-server  ./src/__tests__/ --port 8081 ",
     "build": "webpack --config webpack.config.js --mode development --watch"
   },
@@ -17,7 +17,15 @@
     ],
     "transform": {
       "\\.[jt]sx?$": "babel-jest"
-    }
+    },
+    "collectCoverageFrom": [
+      "!**/src/__tests__/**",
+      "!**/node_modules/**",
+      "!**/coverage/**",
+      "!**/dist/**",
+      "!**/src/index.js/**",
+      "!**/webpack.config.js/**"
+    ]
   },
   "dependencies": {
     "lodash": "^4.17.21",
